src/test/deca/context/valid/provided/affectation.deca
// Description:
//    Affectation et typage
//
// Resultats:
// 
// Historique:
//    cree le 01/01/2022

{
   int a;
   int b = 2;
   a = b;
}
