src/test/deca/context/invalid/provided/classe_sans_nom.deca
// Description:
//    Classe déclarée sans nom.
//
// Resultats:
//    Ligne 11 : Erreur contextuelle
//
// Historique:
//    cree le 01/01/2022

{
        class{
        	int age;
        	String nom;
        	String prenom;
        }

}
